--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vapi-ai/web": "^2.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
